linphone-3.1.0 -- January 19, 2009
	* linphone can now send large video pictures: up to SVGA, configurable via the user interface
	* automatic rescaling of the video windows to the video size of incoming stream
	* improved webcam support on windows
	* plenty of user interface cosmetic improvements
	* set a user friendly gtk theme by default on windows
	* linphonec can compile and work without libreadline
	* enable translations on windows
	* enable lookups of SRV records
	* bugfixing as usual

linphone-3.0.0  -- October 13, 2008
	* new graphical interface based on Glade/Gtk
	* systray icon
	* STUN working for RTP
	* fully ported to windows
	* accurate bandwidth management (to let video occupy all remaning bandwidth)
	* new H264 plugin based on x264 (msx264)
	* automatic call hangup upon media transmission faillure

linphone-2.1.1 -- February 13, 2008
	* fix interroperability bug with Asterisk about a BYE not sent by linphone.
	* fix alsa support weakness (capture underruns not recovered)

linphone-2.1.0 -- January 25, 2008
	* 4CIF support
	* enable resizing of video output
	* hu translation added

linphone-2.0.1 -- November 30, 2007
	* fix interop issue with asterisk
	* answer OPTIONS and other SIP messages
	* allow usage of ALSA user pcm devices with the sound->alsadev config item.

linphone-2.0.0 -- November 15, 2007
	* port to libeXosip2-3.0.x with libosip2-3.0.x
	* implements early media
	* implements incoming re-INVITE
	* presence support improvements
	* ipv6 working on windows
	* implements SDP over 200ok/ACK
	* add experimental snow codec support
	* answers to VFU request in SIP-INFO by sending an I-frame.
	* ffmpeg rate control enabled, improved mpeg4 quality for low bandwidths
	* separate video grabbing and display in linphonec

linphone-1.7.1 -- April 16, 2007
	* cz translation
	* compilation bugfixes (when video support is disabled)
	* fix IM icons path bug

linphone-1.7.0 -- April 11, 2007
	* new splash screen when no webcam is detected