@@ -1,4 +1,4 @@
-linphone-3.1.0 -- January 19, 2009
+linphone-3.1.0 -- March 16, 2009
 	* linphone can now send large video pictures: up to SVGA, configurable via the user interface
 	* automatic rescaling of the video windows to the video size of incoming stream
 	* improved webcam support on windows
@@ -7,6 +7,7 @@ linphone-3.1.0 -- January 19, 2009
 	* linphonec can compile and work without libreadline
 	* enable translations on windows
 	* enable lookups of SRV records
+	* new 'linphonecsh' program to send commands to a linphonec running as daemon using unix sockets or tcp.
 	* bugfixing as usual
 
 linphone-3.0.0  -- October 13, 2008
